spade-tests/src/snapshots/spade_tests__typeinference__unsigned_literals_cannot_be_negative.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() -> uint<8> {
    -1
}


error: Integer value does not fit in uint<8>
  ┌─ testinput:2:5
  │
2 │     -1
  │     ^^ -1 does not fit in an uint<8>
  │
  = note: uint<8> fits unsigned integers in the range (0, 255)
