spade-tests/src/snapshots/spade_tests__typeinference__variable_declarations_are_typechecked_correctly.snap
---
source: spade-tests/src/typeinference.rs
---
entity counter() -> int<8> {
    decl x;
    let a = x;
    let x: int<9> = 0;
    x
}


error: Output type mismatch. Expected int<8>, got int<9>
  ┌─ testinput:1:28
  │  
1 │   entity counter() -> int<8> {
  │                       ------ int<8> type specified here
  │ ╭────────────────────────────^
2 │ │     decl x;
3 │ │     let a = x;
4 │ │     let x: int<9> = 0;
  │ │                - Type 9 inferred here
5 │ │     x
6 │ │ }
  │ ╰─^ Found type int<9>
  │  
  = note: Expected: 8
                in: int<8>
               Got: 9
                in: int<9>
