spade-tests/src/snapshots/spade_tests__typeinference__viloated_where_clause.snap
---
source: spade-tests/src/typeinference.rs
---
fn test<#uint N, #uint M>()
    where N: {M+1}
{
    let x: uint<N> = 0;
    let y: uint<M> = x;
}

fn trigger() {
    test::<8,9>()
}


error: Expected type 8, got 10
  ┌─ testinput:2:15
  │
2 │     where N: {M+1}
  │               ^^^ Expected 8, got 10
  ·
9 │     test::<8,9>()
  │     ------------- The error occurred while inferring types here
  │
  = note: Expected: 8
                in: 8
               Got: 10
                in: 10
