spade-tests/src/snapshots/spade_tests__typeinference__zero_size_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 1] {
    x[7:7]
}


error: Output type mismatch. Expected [int<8>; 1], got [int<8>; 0]
  ┌─ testinput:1:40
  │  
1 │   fn test(x: [int<8>; 6]) -> [int<8>; 1] {
  │                              ----------- [int<8>; 1] type specified here
  │ ╭────────────────────────────────────────^
2 │ │     x[7:7]
  │ │     ------ Type 0 inferred here
3 │ │ }
  │ ╰─^ Found type [int<8>; 0]
  │  
  = note: Expected: 1
                in: [int<8>; 1]
               Got: 0
                in: [int<8>; 0]
